Revert "Java 11"
This reverts commit 6f1709e5dd34ba7e4adc08ffba5e79154653175f.