@@ -12,7 +12,6 @@ import java.nio.file.StandardCopyOption;
 import java.sql.*;
 import java.util.*;
 import java.util.Date;
-import java.util.stream.Collectors;
 
 import static java.lang.System.getProperty;
 import static java.lang.System.getenv;
@@ -81,10 +80,10 @@ public class FirefoxCookieExtractor extends CookieExtractor {
                     if (expectedCookies == null) {
                         continue;
                     }
-                    files.addAll(Arrays.stream(expectedCookies).collect(Collectors.toList()));
+                    files.addAll(Arrays.stream(expectedCookies).toList());
                 }
             } else {
-                files.addAll(Arrays.stream(forCookies).collect(Collectors.toList()));
+                files.addAll(Arrays.stream(forCookies).toList());
             }
 
 
@@ -129,7 +128,7 @@ public class FirefoxCookieExtractor extends CookieExtractor {
     }
 
     private List<String> finalize(List<String> list) {
-        return list.stream().map(s -> s.replace("**", File.separator)).collect(Collectors.toList());
+        return list.stream().map(s -> s.replace("**", File.separator)).toList();
     }
 
     private List<CefCookie> collectCookies() {
